Updated Swedish translation in sv-se.json

--- a/frontend/src/i18n/sv-se.json
+++ b/frontend/src/i18n/sv-se.json
@@ -1,20 +1,20 @@
 {
   "buttons": {
     "cancel": "Avbryt",
-    "clear": "Rensa",
+    "clear": "Töm",
     "close": "Stäng",
-    "continue": "Continue",
+    "continue": "Fortsätt",
     "copy": "Kopiera",
     "copyFile": "Kopiera fil",
     "copyToClipboard": "Kopiera till urklipp",
-    "copyDownloadLinkToClipboard": "Copy download link to clipboard",
+    "copyDownloadLinkToClipboard": "Kopiera hämtningslänk till urklipp",
     "create": "Skapa",
     "delete": "Ta bort",
-    "download": "Ladda ner",
-    "file": "File",
-    "folder": "Folder",
-    "fullScreen": "Toggle full screen",
-    "hideDotfiles": "Hide dotfiles",
+    "download": "Hämta ner",
+    "file": "Fil",
+    "folder": "Mapp",
+    "fullScreen": "Växla helskärm",
+    "hideDotfiles": "Dölj punktfiler",
     "info": "Info",
     "more": "Mer",
     "move": "Flytta",
@@ -24,7 +24,7 @@
     "ok": "OK",
     "permalink": "Skapa en permanent länk",
     "previous": "Föregående",
-    "preview": "Preview",
+    "preview": "Förhandsvisa",
     "publish": "Publisera",
     "rename": "Ändra namn",
     "replace": "Ersätt",
@@ -36,53 +36,53 @@
     "selectMultiple": "Välj flera",
     "share": "Dela",
     "shell": "Växla skal",
-    "submit": "Submit",
-    "switchView": "Byt vy",
+    "submit": "Skicka",
+    "switchView": "Växla vy",
     "toggleSidebar": "Växla sidofält",
     "update": "Uppdatera",
-    "upload": "Ladda upp",
-    "openFile": "Open file",
-    "discardChanges": "Discard",
-    "saveChanges": "Save changes"
+    "upload": "Skicka upp",
+    "openFile": "Öppna fil",
+    "discardChanges": "Förkasta",
+    "saveChanges": "Spara ändringar"
   },
   "download": {
-    "downloadFile": "Ladda ner fil",
-    "downloadFolder": "Ladda ner mapp",
-    "downloadSelected": "Download Selected"
+    "downloadFile": "Hämta ner fil",
+    "downloadFolder": "Hämta ner mapp",
+    "downloadSelected": "Hämta markerade"
   },
   "upload": {
-    "abortUpload": "Are you sure you wish to abort?"
+    "abortUpload": "Är du säker på att du vill avbryta?"
   },
   "errors": {
     "forbidden": "Du saknar rättigheter till detta",
     "internal": "Något gick fel",
     "notFound": "Det går inte att nå den här platsen.",
-    "connection": "The server can't be reached."
+    "connection": "Det gick inte att nå servern."
   },
   "files": {
     "body": "Huvud",
-    "closePreview": "Stäng förhands granskningen",
+    "closePreview": "Stäng förhandsvisning",
     "files": "Filer",
     "folders": "Mappar",
     "home": "Hem",
     "lastModified": "Senast ändrad",
-    "loading": "Laddar.....",
+    "loading": "Läser in.....",
     "lonely": "Väldigt ensamt här....",
     "metadata": "Metadata",
     "multipleSelectionEnabled": "Flerval är på",
     "name": "Namn",
     "size": "Storlek",
-    "sortByLastModified": "Sortera på senast ändrad",
-    "sortByName": "Sortera på namn",
-    "sortBySize": "Sortera på storlek",
-    "noPreview": "Preview is not available for this file."
+    "sortByLastModified": "Sortera efter senast ändrad",
+    "sortByName": "Sortera efter namn",
+    "sortBySize": "Sortera efter storlek",
+    "noPreview": "Förhandsvisning är inte tillgänglig för denna fil."
   },
   "help": {
     "click": "välj fil eller mapp",
     "ctrl": {
       "click": "välj flera filer eller mappar",
-      "f": "öppnar sök",
-      "s": "Spara en fil eller ladda ner den katalog där du är"
+      "f": "öppnar sökning",
+      "s": "Spara en fil eller hämta ner den katalog där du är"
     },
     "del": "ta bort valda objekt",
     "doubleClick": "öppna en fil eller mapp",
@@ -96,14 +96,14 @@
     "loginInstead": "Du har redan ett konto",
     "password": "Lösenord",
     "passwordConfirm": "Bekräfta lösenord",
-    "passwordsDontMatch": "Lösenord matchar inte",
+    "passwordsDontMatch": "Lösenorden matchar inte",
     "signup": "Registrera",
     "submit": "Logga in",
     "username": "Användarnamn",
-    "usernameTaken": "Användarnamn upptaget",
-    "wrongCredentials": "Fel inloggning",
+    "usernameTaken": "Användarnamnet är upptaget",
+    "wrongCredentials": "Felaktig inloggning",
     "logout_reasons": {
-      "inactivity": "You have been logged out due to inactivity."
+      "inactivity": "Du har loggats ut på grund av inaktivitet."
     }
   },
   "permanent": "Permanent",
@@ -111,20 +111,20 @@
     "copy": "Kopiera",
     "copyMessage": "Välj var dina filer skall sparas:",
     "currentlyNavigating": "För närvarande navigerar du på:",
-    "deleteMessageMultiple": "Är du säker på att du vill radera {count} filer(na)?",
+    "deleteMessageMultiple": "Är du säker på att du vill radera {count} filer?",
     "deleteMessageSingle": "Är du säker på att du vill radera denna fil/mapp",
-    "deleteMessageShare": "Are you sure you wish to delete this share({path})?",
-    "deleteUser": "Are you sure you want to delete this user?",
+    "deleteMessageShare": "Är du säker på att du vill radera denna delning ({path})?",
+    "deleteUser": "Är du säker på att du vill radera denna användare?",
     "deleteTitle": "Ta bort filer",
     "displayName": "Visningsnamn:",
-    "download": "Ladda ner filer",
-    "downloadMessage": "Välj format på det du vill lada ner.",
+    "download": "Hämta ner filer",
+    "downloadMessage": "Välj format på det du vill hämta ner.",
     "error": "Något gick fel",
-    "fileInfo": "Fil information",
-    "filesSelected": "{count} filer valda.",
+    "fileInfo": "Filinformation",
+    "filesSelected": "{count} filer markerade.",
     "lastModified": "Senast ändrad",
     "move": "Flytta",
-    "moveMessage": "Välj ny plats för din fil (er)/mapp (ar):",
+    "moveMessage": "Välj ny plats för dina filer/mappar:",
     "newArchetype": "Skapa ett nytt inlägg baserat på en arketyp. Din fil kommer att skapas på innehållsmapp.",
     "newDir": "Ny mapp",
     "newDirMessage": "Ange namn på din nya mapp.",
@@ -137,15 +137,15 @@
     "replace": "Ersätt",
     "replaceMessage": "En av filerna som du försöker överföra är i konflikt på grund av dess namn. Vill du ersätta den befintliga?\n",
     "schedule": "Schema",
-    "scheduleMessage": "Pick a date and time to schedule the publication of this post.",
+    "scheduleMessage": "Välj ett datum och tid för att schemalägga publiceringen av denna post.",
     "show": "Visa",
     "size": "Storlek",
-    "upload": "Upload",
-    "uploadFiles": "Uploading {files} files...",
-    "uploadMessage": "Select an option to upload.",
-    "optionalPassword": "Optional password",
-    "resolution": "Resolution",
-    "discardEditorChanges": "Are you sure you wish to discard the changes you've made?"
+    "upload": "Skicka upp",
+    "uploadFiles": "Skickar upp {files} filer...",
+    "uploadMessage": "Välj ett alternativ att skicka upp.",
+    "optionalPassword": "Valfritt lösenord",
+    "resolution": "Upplösning",
+    "discardEditorChanges": "Är du säker på att du vill förkasta ändringarna du gjort?"
   },
   "search": {
     "images": "Bilder",
@@ -161,42 +161,42 @@
     "aceEditorTheme": "Ace editor theme",
     "admin": "Admin",
     "administrator": "Administratör",
-    "allowCommands": "Exekvera kommandon",
-    "allowEdit": "Ändra, döp om och ta bort filer eller mappar",
+    "allowCommands": "Kör kommandon",
+    "allowEdit": "Ändra, byt namn och ta bort filer eller mappar",
     "allowNew": "Skapa nya filer eller mappar",
     "allowPublish": "Publicera nya inlägg och sidor",
     "allowSignup": "Tillåt användare att registrera sig",
     "avoidChanges": "(lämna blankt för att undvika ändringar)",
     "branding": "Varumärke",
-    "brandingDirectoryPath": "Sökväg till varumärkes katalog",
-    "brandingHelp": "Du kan skräddarsyr hur din fil hanterar instansen ser ut och känns genom att ändra dess namn, ersätter logo typen, lägga till egna stilar och även inaktivera externa länkar till GitHub.\nMer information om anpassad varumärkes profilering finns i {0}.",
+    "brandingDirectoryPath": "Sökväg till varumärkeskatalog",
+    "brandingHelp": "Du kan skräddarsyr hur din fil hanterar instansen ser ut och känns genom att ändra dess namn, ersätter logotypen, lägga till egna stilar och även inaktivera externa länkar till GitHub.\nMer information om anpassad varumärkesprofilering finns i {0}.",
     "changePassword": "Ändra lösenord",
-    "commandRunner": "Kommando körare",
-    "commandRunnerHelp": "Här kan du ange kommandon som körs i de namngivna händelserna. Du måste skriva en per rad. Miljövariablerna {0} och {1} kommer att vara tillgängliga, och vara {0} i förhållande till {1}. För mer information om den här funktionen och de tillgängliga miljövariablerna, vänligen läs {2}.",
+    "commandRunner": "Kommandokörare",
+    "commandRunnerHelp": "Här kan du ange kommandon som körs i de namngivna händelserna. Du måste skriva en per rad. Miljövariablerna {0} och {1} kommer att vara tillgängliga, och vara {0} i förhållande till {1}. För mer information om den här funktionen och de tillgängliga miljövariablerna, läs {2}.",
     "commandsUpdated": "Kommandon uppdaterade!",
-    "createUserDir": "Auto skapa användarens hemkatalog när du lägger till nya användare",
-    "minimumPasswordLength": "Minimum password length",
-    "tusUploads": "Chunked Uploads",
-    "tusUploadsHelp": "File Browser supports chunked file uploads, allowing for the creation of efficient, reliable, resumable and chunked file uploads even on unreliable networks.",
-    "tusUploadsChunkSize": "Indicates to maximum size of a request (direct uploads will be used for smaller uploads). You may input a plain integer denoting byte size input or a string like 10MB, 1GB etc.",
-    "tusUploadsRetryCount": "Number of retries to perform if a chunk fails to upload.",
-    "userHomeBasePath": "Base path for user home directories",
-    "userScopeGenerationPlaceholder": "The scope will be auto generated",
-    "createUserHomeDirectory": "Create user home directory",
+    "createUserDir": "Skapa automatiskt användarens hemkatalog när du lägger till nya användare",
+    "minimumPasswordLength": "Minsta lösenordslängd",
+    "tusUploads": "Uppdelade uppladdningar",
+    "tusUploadsHelp": "Filbläddraren stöder uppdelade filuppladdningar, vilket möjliggör skapandet av effektiva, tillförlitliga, återupptagbara och uppdelade filskickar upp även på otillförlitliga nätverk.",
+    "tusUploadsChunkSize": "Anger maximal storlek för en begäran (direkta skickar upp används för mindre skickar upp). Du kan inmatna ett heltal som anger storleken i byte eller en sträng som 10 MB, 1 GB. etc.",
+    "tusUploadsRetryCount": "Antal försök som ska göras om en del inte kan skicka upp.",
+    "userHomeBasePath": "Bassökväg för användarnas hemkataloger",
+    "userScopeGenerationPlaceholder": "Omfattningen kommer att genereras automatiskt.",
+    "createUserHomeDirectory": "Skapa användarhemkatalog",
     "customStylesheet": "Anpassad formatmall",
-    "defaultUserDescription": "Detta är standard inställningar för användare.",
+    "defaultUserDescription": "Detta är standardinställningar för användare.",
     "disableExternalLinks": "Inaktivera externa länkar (förutom dokumentation)",
-    "disableUsedDiskPercentage": "Disable used disk percentage graph",
+    "disableUsedDiskPercentage": "Inaktiverad graf över procentuell användning av hårddisk",
     "documentation": "dokumentation",
     "examples": "Exempel",
     "executeOnShell": "Exekvera på skal",
-    "executeOnShellDescription": "Som standard kör fil bläddraren kommandona genom att anropa deras binärfiler direkt. Om du vill köra dem på ett skal i stället (till exempel bash eller PowerShell), kan du definiera det här med nödvändiga argument och flaggor. Om det är inställt kommer kommandot du kör att läggas till som ett argument. Detta gäller både användar kommandon och händelse krokar.",
+    "executeOnShellDescription": "Som standard kör filbläddraren kommandona genom att anropa deras binärfiler direkt. Om du vill köra dem på ett skal i stället (till exempel bash eller PowerShell), kan du definiera det här med nödvändiga argument och flaggor. Om det är inställt kommer kommandot du kör att läggas till som ett argument. Detta gäller både användarkommandon och event hooks.",
     "globalRules": "Det här är en global uppsättning regler för att tillåta och inte tillåta. De gäller för alla användare. Du kan definiera specifika regler för varje användares inställningar för att åsidosätta de här inställningarna.",
     "globalSettings": "Globala inställningar",
-    "hideDotfiles": "Hide dotfiles",
+    "hideDotfiles": "Dölj punktfiler",
     "insertPath": "Ange sökväg",
-    "insertRegex": "Sätt in regex expression",
-    "instanceName": "Instans namn",
+    "insertRegex": "Ange reguljärt uttryck",
+    "instanceName": "Instansnamn",
     "language": "Språk",
     "lockPassword": "Förhindra att användare kan byta lösenord",
     "newPassword": "Ditt nya lösenord",
@@ -204,41 +204,41 @@
     "newUser": "Ny användare",
     "password": "Lösenord",
     "passwordUpdated": "Lösenord uppdaterat",
-    "path": "Path",
+    "path": "Sökväg",
     "perm": {
       "create": "Skapa filer och mappar",
       "delete": "Ta bort filer och mappar",
-      "download": "Ladda ner",
-      "execute": "Exekvera kommandon",
+      "download": "Hämta ner",
+      "execute": "Kör kommandon",
       "modify": "Ändra fil",
       "rename": "Byta namn på eller flytta filer och kataloger",
       "share": "Dela filer"
     },
-    "permissions": "Rättigheter",
+    "permissions": "Behörigheter",
     "permissionsHelp": "Du kan ange att användaren ska vara administratör eller välja behörigheterna individuellt. Om du väljer \"administratör \" kommer alla andra alternativ att kontrolleras automatiskt. Hanteringen av användare är fortfarande ett privilegium för en administratör.\n",
-    "profileSettings": "Profil inställningar",
-    "ruleExample1": "förhindrar åtkomst till en dot-fil (till exempel. git,. gitignore) i varje mapp.\n",
+    "profileSettings": "Profilinställningar",
+    "ruleExample1": "förhindrar åtkomst till en punktfil (till exempel. git,. gitignore) i varje mapp.\n",
     "ruleExample2": "blockerar åtkomsten till filen som heter Caddyfilen i roten av scopet.",
     "rules": "Regler",
-    "rulesHelp": "Här kan du definiera en uppsättning regler för godkänna och neka för den här specifika användaren. Den blockerade filen kommer inte upp i listningarna och kommer inte att vara tillgänglig till användaren. Vi stöder regex och sökvägar i förhållande till användarnas omfång.\n",
+    "rulesHelp": "Här kan du definiera en uppsättning regler för tillåta och neka för den här specifika användaren. Den blockerade filen kommer inte upp i listningarna och kommer inte att vara tillgänglig till användaren. Vi stöder regex och sökvägar i förhållande till användarnas omfattning.\n",
     "scope": "Omfattning",
-    "setDateFormat": "Set exact date format",
-    "settingsUpdated": "Inställning uppdaterad!",
-    "shareDuration": "Share Duration",
-    "shareManagement": "Share Management",
-    "shareDeleted": "Share deleted!",
-    "singleClick": "Use single clicks to open files and directories",
+    "setDateFormat": "Ställ in exakt datumformat",
+    "settingsUpdated": "Inställningen uppdaterad!",
+    "shareDuration": "Delningstid",
+    "shareManagement": "Delningshantering",
+    "shareDeleted": "Delning borttagen!",
+    "singleClick": "Öppna filer och kataloger med ett enda klick",
     "themes": {
-      "default": "System default",
-      "dark": "Dark",
-      "light": "Light",
-      "title": "Theme"
+      "default": "Systemstandard",
+      "dark": "Mörkt",
+      "light": "Ljust",
+      "title": "Tema"
     },
     "user": "Användare",
     "userCommands": "Kommandon",
-    "userCommandsHelp": "En utrymmesseparerad lista med tillgängliga kommandon för den här användaren. Exempel:\n",
+    "userCommandsHelp": "En mellanslagsseparerad lista med tillgängliga kommandon för den här användaren. Exempel:\n",
     "userCreated": "Användare skapad",
-    "userDefaults": "Standard inställning för användare",
+    "userDefaults": "Standardinställning för användare",
     "userDeleted": "Användare borttagen",
     "userManagement": "Användarehantering",
     "userUpdated": "Användare uppdaterad!",
@@ -256,7 +256,7 @@
     "preview": "Visa",
     "settings": "Inställningar",
     "signup": "Registrera",
-    "siteSettings": "System inställningar"
+    "siteSettings": "Systeminställningar"
   },
   "success": {
     "linkCopied": "Länk kopierad"
