fix: added column separator select (comma, semicolon and both) in CSV viewer

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -272,5 +272,10 @@
     "minutes": "Minutes",
     "seconds": "Seconds",
     "unit": "Time Unit"
+  },
+  "available_csv_separators": {
+    "comma": "Comma (,)",
+    "semicolon": "Semicolon (;)",
+    "both": "Both (,) and (;)"
   }
 }
