fix(frontend): csv viewer i18n strings

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -78,7 +78,14 @@
     "sortBySize": "Sort by size",
     "noPreview": "Preview is not available for this file.",
     "csvTooLarge": "CSV file is too large for preview (>5MB). Please download to view.",
-    "csvLoadFailed": "Failed to load CSV file."
+    "csvLoadFailed": "Failed to load CSV file.",
+    "showingRows": "Showing {count} row(s)",
+    "columnSeparator": "Column Separator",
+    "csvSeparators": {
+      "comma": "Comma (,)",
+      "semicolon": "Semicolon (;)",
+      "both": "Both (,) and (;)"
+    }
   },
   "help": {
     "click": "select file or directory",
@@ -272,10 +279,5 @@
     "minutes": "Minutes",
     "seconds": "Seconds",
     "unit": "Time Unit"
-  },
-  "available_csv_separators": {
-    "comma": "Comma (,)",
-    "semicolon": "Semicolon (;)",
-    "both": "Both (,) and (;)"
   }
 }
