--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -44,7 +44,9 @@
     "openFile": "Open file",
     "discardChanges": "Discard",
     "saveChanges": "Save changes",
-    "editAsText": "Edit as Text"
+    "editAsText": "Edit as Text",
+    "increaseFontSize": "Increase font size",
+    "decreaseFontSize": "Decrease font size"
   },
   "download": {
     "downloadFile": "Download File",
