feat: support streaming response for search results (#5630)
Co-authored-by: manx98 <1323517022@qq.com>

--- a/frontend/src/i18n/ru.json
+++ b/frontend/src/i18n/ru.json
@@ -42,6 +42,7 @@
     "update": "Обновить",
     "upload": "Загрузить",
     "openFile": "Открыть файл",
+    "stopSearch": "Прекратить поиск",
     "discardChanges": "Отказаться",
     "saveChanges": "Сохранить",
     "editAsText": "Редактировать как текст",
