--- a/frontend/src/i18n/zh-tw.json
+++ b/frontend/src/i18n/zh-tw.json
@@ -42,6 +42,7 @@
     "update": "更新",
     "upload": "上傳",
     "openFile": "開啟檔案",
+    "stopSearch": "停止搜尋",
     "discardChanges": "放棄變更",
     "saveChanges": "Save changes",
     "editAsText": "Edit as Text",
