--- a/frontend/src/i18n/ja.json
+++ b/frontend/src/i18n/ja.json
@@ -42,6 +42,7 @@
     "update": "更新",
     "upload": "アップロード",
     "openFile": "ファイルを開く",
+    "stopSearch": "検索を停止",
     "discardChanges": "Discard",
     "saveChanges": "Save changes",
     "editAsText": "Edit as Text",
