--- a/frontend/src/i18n/ko.json
+++ b/frontend/src/i18n/ko.json
@@ -41,6 +41,7 @@
     "toggleSidebar": "사이드바 전환",
     "update": "업데이트",
     "upload": "업로드",
+    "stopSearch": "검색 중지",
     "openFile": "파일 열기",
     "discardChanges": "변경 사항 취소",
     "saveChanges": "변경사항 저장",
