feat: add direct image open link

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -42,6 +42,7 @@
     "update": "Update",
     "upload": "Upload",
     "openFile": "Open file",
+    "openDirect": "Open direct",
     "discardChanges": "Discard",
     "stopSearch": "Stop searching",
     "saveChanges": "Save changes",
