fix: replace custom parser with csv-parse library

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -61,7 +61,8 @@
     "forbidden": "You don't have permissions to access this.",
     "internal": "Something really went wrong.",
     "notFound": "This location can't be reached.",
-    "connection": "The server can't be reached."
+    "connection": "The server can't be reached.",
+    "csv_parsing_error": "Failed to parse CSV file: {error}"
   },
   "files": {
     "body": "Body",
