rename to View Raw, enable for audio and video

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -42,7 +42,7 @@
     "update": "Update",
     "upload": "Upload",
     "openFile": "Open file",
-    "openDirect": "Open direct",
+    "openDirect": "View raw",
     "discardChanges": "Discard",
     "stopSearch": "Stop searching",
     "saveChanges": "Save changes",
